create a nav bar, add an about page, add an alternative font

--- a/about.html
+++ b/about.html
@@ -4,9 +4,46 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/about.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Monofett&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
-  <h1>hello</h1>
+  <nav>
+    <div class="name-header">
+      <h4 class="name">Andrea Bances-Monard</h4>
+      <p class="subheading">Software Engineer</p>
+    </div>
+    <ul>
+      <li>
+        <a href="/home.html">Home</a>
+      </li>
+      <li>
+        <a href="/about.html">About</a>
+      </li>
+      <li>
+        <a href="/projects.html">Projects</a>
+      </li>
+      <li>
+        <a href="/resume.html">Resume</a>
+      </li>
+      <li>
+        <a href="/contact.html">Contact</a>
+      </li>
+    </ul>
+  </nav>
+  <main>
+    <div class="pic-container">
+      <img src="/assets/images/ballet.jpeg" alt="ballet">
+      <img src="/assets/images/scientist.JPG" alt="ballet">
+    </div>
+    <div class="about-me">
+      <h1>A Little Bit About Me</h1>
+      <p>I’m Andrea, a ballerina, turned scientist, turned software engineer. I am a creative and artistic individual with a keen eye for the small details. I love the healthcare field but have also found a passion for coding, I’m hoping to merge the two worlds to create software solutions that enhance patient care.</p>
+    </div>
+  </main>
 </body>
 </html>
