--- a/about.html
+++ b/about.html
@@ -19,19 +19,19 @@
     </div>
     <ul>
       <li>
-        <a href="/home.html">Home</a>
+        <a href="/home.html" class="home">Home</a>
       </li>
       <li>
-        <a href="/about.html">About</a>
+        <a href="/about.html" class="about">About</a>
       </li>
       <li>
-        <a href="/projects.html">Projects</a>
+        <a href="/projects.html" class="projects">Projects</a>
       </li>
       <li>
-        <a href="/resume.html">Resume</a>
+        <a href="/resume.html" class="resume">Resume</a>
       </li>
       <li>
-        <a href="/contact.html">Contact</a>
+        <a href="/contact.html" class="contact">Contact</a>
       </li>
     </ul>
   </nav>
