add media queries to nav bar on smaller screen, change links on home page to allow you to click anywhere on the circle not just the text

--- a/home.html
+++ b/home.html
@@ -16,20 +16,10 @@
     <p class="subtitle">Software Engineer</p>
     <img src="/assets/images/profile-pic.png" alt="profile picture" class="profile-pic">
     <div class="links-container">
-      <div class="links" id="about">
-          <a href="/about.html">
-          About
-        </a>
-      </div>
-      <div class="links" id="projects">
-        <a href="/projects.html">Projects</a>
-      </div>
-      <div class="links" id="resume">
-        <a href="/resume.html">Resume</a>
-      </div>
-      <div class="links" id="contact">
-        <a href="/contact.html">Contact</a>
-      </div>
+      <a href="/about.html" class="links" id="about">About</a>
+      <a href="/projects.html" class="links" id="projects">Projects</a>
+      <a href="/resume.html" class="links" id="resume">Resume</a>
+      <a href="/contact.html" class="links" id="contact">Contact</a>
     </div>
   </main>
 </body>
