add projects with descriptiion to the projects page

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <title>Document</title>
 </head>
 <body>
-  <nav>
+  <nav class="navbar">
     <div class="name-header">
       <h4 class="name">Andrea Bances-Monard</h4>
       <p class="subheading">Software Engineer</p>
