add github and deployed link for projects

--- a/projects.html
+++ b/projects.html
@@ -40,28 +40,44 @@
     <div class="projects-container">
       <div class="project">
         <img src="/assets/images/bamm.png" alt="BAMM voyage image" class="bamm">
-        <!-- <div class="text"> -->
-          <h2 class="project-name">BAMM Voyage</h2>
-          <p class="project-description">Pronounced like "Bon Vonage" this MERN stack project was built with three other engineers. We all shared a passion for travel and decided to build an application that would make travel planning easier.</p>
-        <!-- </div> -->
+        <h2 class="project-name">BAMM Voyage</h2>
+        <p class="project-description">Pronounced like "Bon Vonage" this MERN stack project was built with three other engineers. We all shared a passion for travel and decided to build an application that would make travel planning easier.</p>
+        <div class="links">
+          <a href="https://github.com/CurrentlyBob/bamm-voyage-front-end" target="
+          _blank" class="github-link">Github</a>
+          <a href="https://bamm-voyage.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+        </div>
       </div>
       <div class="project">
         <img src="/assets/images/levelup.png" alt="LevelUp image" class="levelup-logo">
         <img src="/assets/images/levelup-site.png" alt="LevelUp site image" class="levelup-site">
-        <!-- <div class="text"> -->
-          <h2 class="project-name">LevelUp</h2>
-          <p class="project-description">It's time to LevelUp your life. This MEN stack solo project was created specifically to get your life in order. It has a spot for everything from creating detailed goals to helping you break your pesky bad habits.</p>
-        <!-- </div> -->
+        <h2 class="project-name">LevelUp</h2>
+        <p class="project-description">It's time to LevelUp your life. This MEN stack solo project was created specifically to get your life in order. It has a spot for everything from creating detailed goals to helping you break your pesky bad habits.</p>
+        <div class="links">
+          <a href="https://github.com/andrea1234321/level-up" target="
+          _blank" class="github-link">Github</a>
+          <a href="https://andrea-level-up.fly.dev/" target="_blank" class="deployed-link">Launch App</a>
+        </div>
       </div>
       <div class="project">
         <img src="/assets/images/blackjack.png" alt="Blackjack image" class="blackjack">
         <h2 class="project-name">BlackJack</h2>
         <p class="project-description">Everyone's favorite casino game is finally here in a vintage Vegas theme. Built purely with HTML, CSS, and Javascript this blackjack game has it all from doubling down to ace logic. Get ready to gamble that money away, as they say, "scared money, don't make money". </p>
+        <div class="links">
+          <a href="https://github.com/andrea1234321/BlackJack" target="
+          _blank" class="github-link">Github</a>
+          <a href="https://andrea-blackjack.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+        </div>
       </div>
       <div class="project">
         <img src="/assets/images/showcase.png" alt="Showcase image" class="showcase">
         <h2 class="project-name">Showcase</h2>
         <p class="project-description">Need a place to showcase your favorite shows, well this is the app for you. This simple app was created in just a couple of days using Python and Django.</p>
+        <div class="links">
+          <a href="https://github.com/andrea1234321/showcase" target="
+          _blank" class="github-link">Github</a>
+          <a href="https://andreashowcase.fly.dev/" target="_blank" class="deployed-link">Launch App</a>
+        </div>
       </div>
 
     </div>
