create a resume page with an icon that downloads my resume

--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/nav.css">
-  <link rel="stylesheet" href="/css/about.css">
+  <link rel="stylesheet" href="/css/resume.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Monofett&display=swap" rel="stylesheet">
@@ -36,15 +36,11 @@
     </ul>
   </nav>
   <main>
-    <div class="pic-container">
-      <img src="/assets/images/ballet.jpeg" alt="ballet">
-      <img src="/assets/images/scientist.JPG" alt="chemist">
-      <img src="/assets/images/coding.JPG" alt="coding">
-    </div>
-    <div class="about-me">
-      <h1>A Little Bit About Me</h1>
-      <p>I’m Andrea, a ballerina, turned chemist, turned software engineer. I am a creative and artistic individual with a keen eye for the small details. I love the healthcare field but have also found a passion for coding, I’m hoping to merge the two worlds to create software solutions that enhance patient care.</p>
-    </div>
+    <h1 class="resume-title">Resume</h1>
+    <a href="/assets/files/andrea-resume.docx">
+      <img src="/assets/images/resume.png" alt="Andrea's Resume" class="resume">
+    </a>
+    <h2>Click the icon download my resume</h2>
   </main>
 </body>
 </html>
