change title to my name, change email on formsubmit

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Monofett&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>Andrea Bances-Monard</title>
 </head>
 <body>
   <nav class="navbar">
@@ -39,7 +39,7 @@
     <h1 class="contact-title">Contact me</h1>
     <p class="contact-subtitle">Look forward to hearing from you</p>
     <div>
-      <form action="https://formsubmit.co/andrea_bancesmonard@knights.ucf.edu" method="POST" class="form-container">
+      <form action="https://formsubmit.co/fc1aa839b71588af4a281ab3a91da5ba" method="POST" class="form-container">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
         <label for="lname">Last Name</label>
