fix contact page message box, remove placeholders

--- a/contact.html
+++ b/contact.html
@@ -37,19 +37,19 @@
   </nav>
   <main>
     <h1 class="contact-title">Contact me</h1>
-    <p class="contact-subtitle">Look forward to hearing from you</p>
+    <p class="contact-subtitle">Looking forward to hearing from you</p>
     <div>
       <form action="https://formsubmit.co/fc1aa839b71588af4a281ab3a91da5ba" method="POST" class="form-container">
         <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <input type="text" id="fname" name="firstname">
         <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <input type="text" id="lname" name="lastname">
         <label for="email">Email</label>
-        <input type="text" id="email" name="email" placeholder="ex. john.doe@email.com">
+        <input type="text" id="email" name="email">
         <label for="subject">Subject</label>
-        <input type="text" id="subject" name="subject" autocomplete="off" placeholder="email subject">
-        <label for="subject">Subject</label>
-        <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
+        <input type="text" id="subject" name="subject" autocomplete="off">
+        <label for="message">Message</label>
+        <textarea id="message" name="message" placeholder="Don't be shy, write a message!" style="height:200px"></textarea>
         <input type="submit" value="Submit">
       </form>
     </div>
