change layout of resume page for smaller screen size

--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
     <a href="/assets/files/andrea-resume.docx">
       <img src="/assets/images/resume.png" alt="Andrea's Resume" class="resume">
     </a>
-    <h2>Click the icon download my resume</h2>
+    <h2 class="resume-description">Click the icon to download my resume</h2>
   </main>
 </body>
 </html>
