change layout of contact page for smaller screens

--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
   <main>
     <h1 class="resume-title">Resume</h1>
     <a href="/assets/files/andrea-resume.docx">
-      <img src="/assets/images/resume.png" alt="Andrea's Resume" class="resume">
+      <img src="/assets/images/resume.png" alt="Andrea's Resume" class="resume-icon">
     </a>
     <h2 class="resume-description">Click the icon to download my resume</h2>
   </main>
