--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         <label for="subject">Subject</label>
         <input type="text" id="subject" name="subject" autocomplete="off">
         <label for="message">Message</label>
-        <textarea id="message" name="message" placeholder="Don't be shy, write a message!" style="height:200px"></textarea>
+        <textarea id="message" name="message" placeholder="Don't be shy, write a message!"></textarea>
         <input type="submit" value="Submit">
       </form>
     </div>
