create a hamburger menu on a smaller screen width

--- a/resume.html
+++ b/resume.html
@@ -9,15 +9,16 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Monofett&display=swap" rel="stylesheet">
+  <script defer src="/js/app.js"></script>
   <title>Andrea Bances-Monard</title>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="name-header">
+  <nav class="navbar-reg">
+    <div class="name-header-reg">
       <h4 class="name">Andrea Bances-Monard</h4>
       <p class="subheading">Software Engineer</p>
     </div>
-    <ul>
+    <ul class="nav-links">
       <li>
         <a href="/home.html" class="home">Home</a>
       </li>
@@ -34,6 +35,32 @@
         <a href="/contact.html" class="contact">Contact</a>
       </li>
     </ul>
+  </nav>
+  <nav class="nav-bar-hamburger">
+    <div class="name-header">
+      <h4 class="name">Andrea Bances-Monard</h4>
+      <p class="subheading">Software Engineer</p>
+    </div>
+    <div class="hamburger-menu-container">
+      <img src="/assets/images/hamburger-icon.png" alt="hamburger menu" class="hamburger-icon">
+      <ul class="hamburger-menu-links">
+        <li>
+          <a href="/home.html" class="home">Home</a>
+        </li>
+        <li>
+          <a href="/about.html" class="about">About</a>
+        </li>
+        <li>
+          <a href="/projects.html" class="projects">Projects</a>
+        </li>
+        <li>
+          <a href="/resume.html" class="resume">Resume</a>
+        </li>
+        <li>
+          <a href="/contact.html" class="contact">Contact</a>
+        </li>
+      </ul>
+    </div>
   </nav>
   <main>
     <h1 class="resume-title">Resume</h1>
