add portfolio to projects list, create a readme

--- a/projects.html
+++ b/projects.html
@@ -106,6 +106,16 @@
           <a href="https://andreashowcase.fly.dev/" target="_blank" class="deployed-link">Launch App</a>
         </div>
       </div>
+      <div class="project">
+        <img src="/assets/images/portfolio.png" alt="portfolio image" class="portfolio">
+        <h2 class="project-name">My Portfolio</h2>
+        <p class="project-description">That's right, the website you are currently on was built entirely by me (even the background images). I wanted to be able to show my bubbly personality through my own portfolio piece. I hope you got a sense of who I am and a little sprinkle of what I can bring to your company.</p>
+        <div class="links">
+          <a href="https://github.com/andrea1234321/portfolio" target="
+          _blank" class="github-link">Github</a>
+          <a href="https://andrea-bances-monard-portfolio.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+        </div>
+      </div>
 
     </div>
   </main>
