add hover effects to projects that showcases tools/languages used to build them

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,16 @@
     <h1 class="projects-header">My Projects</h1>
     <div class="projects-container">
       <div class="project">
-        <img src="/assets/images/bamm.png" alt="BAMM voyage image" class="bamm">
+        <div class="bamm">
+          <div class="built">
+            <img src="/assets/images/react-bw.png" alt="react" class="built-languages">
+            <img src="/assets/images/js-bw.png" alt="JS" class="built-languages">
+            <img src="/assets/images/html-bw.png" alt="HTML" class="built-languages">
+            <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
+            <h1 class="built-languages-name">Express</h1>
+            <h1 class="built-languages-name">Mongoose</h1>
+          </div>
+        </div>
         <h2 class="project-name">BAMM Voyage</h2>
         <p class="project-description">Pronounced like "Bon Vonage" this MERN stack project was built with three other engineers. We all shared a passion for travel and decided to build an application that would make travel planning easier.</p>
         <div class="links">
@@ -76,8 +85,15 @@
         </div>
       </div>
       <div class="project">
-        <img src="/assets/images/levelup.png" alt="LevelUp image" class="levelup-logo">
-        <img src="/assets/images/levelup-site.png" alt="LevelUp site image" class="levelup-site">
+        <div class="level-up">
+          <div class="built">
+            <img src="/assets/images/js-bw.png" alt="JS" class="built-languages">
+            <img src="/assets/images/node-js-bw.png" alt="Node JS" class="built-languages">
+            <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
+            <h1 class="built-languages-name">EJS</h1>
+            <h1 class="built-languages-name">Mongoose</h1>
+          </div>
+        </div>
         <h2 class="project-name">LevelUp</h2>
         <p class="project-description">It's time to LevelUp your life. This MEN stack solo project was created specifically to get your life in order. It has a spot for everything from creating detailed goals to helping you break your pesky bad habits.</p>
         <div class="links">
@@ -87,7 +103,13 @@
         </div>
       </div>
       <div class="project">
-        <img src="/assets/images/blackjack.png" alt="Blackjack image" class="blackjack">
+        <div class="blackjack">
+          <div class="built">
+            <img src="/assets/images/js-bw.png" alt="JS" class="built-languages">
+            <img src="/assets/images/html-bw.png" alt="HTML" class="built-languages">
+            <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
+          </div>
+        </div>
         <h2 class="project-name">BlackJack</h2>
         <p class="project-description">Everyone's favorite casino game is finally here in a vintage Vegas theme. Built purely with HTML, CSS, and Javascript this blackjack game has it all from doubling down to ace logic. Get ready to gamble that money away, as they say, "scared money, don't make money". </p>
         <div class="links">
@@ -97,7 +119,16 @@
         </div>
       </div>
       <div class="project">
-        <img src="/assets/images/showcase.png" alt="Showcase image" class="showcase">
+        <div class="showcase">
+          <div class="built">
+            <img src="/assets/images/python-bw.png" alt="Python" class="built-languages">
+            <img src="/assets/images/django-bw.png" alt="Django" class="built-languages">
+            <img src="/assets/images/docker-bw.png" alt="Docker" class="built-languages">
+            <img src="/assets/images/sql-bw.png" alt="SQL" class="built-languages">
+            <img src="/assets/images/html-bw.png" alt="HTML" class="built-languages">
+            <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
+          </div>
+        </div>
         <h2 class="project-name">Showcase</h2>
         <p class="project-description">Need a place to showcase your favorite shows, well this is the app for you. This simple app was created in just a couple of days using Python and Django.</p>
         <div class="links">
@@ -107,7 +138,13 @@
         </div>
       </div>
       <div class="project">
-        <img src="/assets/images/portfolio.png" alt="portfolio image" class="portfolio">
+        <div class="portfolio">
+          <div class="built">
+            <img src="/assets/images/js-bw.png" alt="JS" class="built-languages">
+            <img src="/assets/images/html-bw.png" alt="HTML" class="built-languages">
+            <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
+          </div>
+        </div>
         <h2 class="project-name">My Portfolio</h2>
         <p class="project-description">That's right, the website you are currently on was built entirely by me (even the background images). I wanted to be able to show my bubbly personality through my own portfolio piece. I hope you got a sense of who I am and a little sprinkle of what I can bring to your company.</p>
         <div class="links">
@@ -116,7 +153,6 @@
           <a href="https://andrea-bances-monard-portfolio.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
         </div>
       </div>
-
     </div>
   </main>
 </body>
