--- a/resume.html
+++ b/resume.html
@@ -68,6 +68,15 @@
       <img src="/assets/images/resume.png" alt="Andrea's Resume" class="resume-icon">
     </a>
     <h2 class="resume-description">Click the icon to download my resume</h2>
+    <!-- <div class="languages">
+      <img src="/assets/images/js-bw.png" alt="JS" class="language">
+      <img src="/assets/images/react-bw.png" alt="React" class="language">
+      <img src="/assets/images/python-bw.png" alt="Python" class="language">
+      <img src="/assets/images/django-bw.png" alt="Django" class="language">
+      <img src="/assets/images/sql-bw.png" alt="SQL" class="language">
+      <img src="/assets/images/css-bw.png" alt="CSS" class="language">
+      <img src="/assets/images/html-bw.png" alt="HTML" class="language">
+    </div> -->
   </main>
 </body>
 </html>
