--- a/home.html
+++ b/home.html
@@ -8,6 +8,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Monofett&display=swap" rel="stylesheet">
+  <link 
+  id="favicon"
+  rel="icon"
+  type="image/png"
+  href="/assets/images/favicon.png"
+  sizes="32x32">
   <title>Andrea Bances-Monard</title>
 </head>
 <body>
