update resume, resize resume page

--- a/resume.html
+++ b/resume.html
@@ -63,20 +63,43 @@
     </div>
   </nav>
   <main>
-    <h1 class="resume-title">Resume</h1>
-    <a href="/assets/files/andrea-resume.docx">
-      <img src="/assets/images/resume.png" alt="Andrea's Resume" class="resume-icon">
-    </a>
-    <h2 class="resume-description">Click the icon to download my resume</h2>
-    <!-- <div class="languages">
-      <img src="/assets/images/js-bw.png" alt="JS" class="language">
-      <img src="/assets/images/react-bw.png" alt="React" class="language">
-      <img src="/assets/images/python-bw.png" alt="Python" class="language">
-      <img src="/assets/images/django-bw.png" alt="Django" class="language">
-      <img src="/assets/images/sql-bw.png" alt="SQL" class="language">
-      <img src="/assets/images/css-bw.png" alt="CSS" class="language">
-      <img src="/assets/images/html-bw.png" alt="HTML" class="language">
-    </div> -->
+    <div class="resume-overview">
+      <h2 class="resume-title">Resume</h2>
+      <!-- <div class="resume-title-container"> -->
+      <h2 class="resume-description">Download my full resume:</h2>
+      <a href="/assets/files/andrea-resume.docx">
+        <img src="/assets/images/resume.png" alt="Andrea's Resume" class="resume-icon">
+      </a>
+      <!-- </div> -->
+      <!-- <div class="work-experience">
+        <h2>Work Experience:</h2>
+        <div class="work">
+          <h3>General Assembly | Software Engineering Fellow</h3>
+          <h3>Wellmed | Medical Scribe</h3>
+          <h3>ScribeAmerica | Medical Scribe</h3>
+          <h3>Private Family | Caregiver</h3>
+        </div>
+      </div>
+      <div class="education-contianer">
+        <h2>Eduction:</h2>
+        <div class="education">
+          <h3>General Assembly | Software Engineering Certification</h3>
+          <h3>University of Central Florida | Bachelor's of Science in Chemistry</h3>
+        </div>
+      </div>
+      <div class="skills">
+        <h2>Skills/Tools:</h2>
+        <div class="languages">
+          <img src="/assets/images/js-bw.png" alt="JS" class="language">
+          <img src="/assets/images/react-bw.png" alt="React" class="language">
+          <img src="/assets/images/python-bw.png" alt="Python" class="language">
+          <img src="/assets/images/django-bw.png" alt="Django" class="language">
+          <img src="/assets/images/sql-bw.png" alt="SQL" class="language">
+          <img src="/assets/images/css-bw.png" alt="CSS" class="language">
+          <img src="/assets/images/html-bw.png" alt="HTML" class="language">
+        </div>
+      </div> -->
+    </div>
   </main>
 </body>
 </html>
