add border radius to pictures in about page, resize images based on screen size, make all project containers the same size

--- a/projects.html
+++ b/projects.html
@@ -76,12 +76,14 @@
             <h1 class="built-languages-name">Mongoose</h1>
           </div>
         </div>
-        <h2 class="project-name">BAMM Voyage</h2>
-        <p class="project-description">Pronounced like "Bon Vonage" this MERN stack project was built with three other engineers. We all shared a passion for travel and decided to build an application that would make travel planning easier.</p>
-        <div class="links">
-          <a href="https://github.com/CurrentlyBob/bamm-voyage-front-end" target="
-          _blank" class="github-link">Github</a>
-          <a href="https://bamm-voyage.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+        <div class="description">
+          <h2 class="project-name">BAMM Voyage</h2>
+          <p class="project-description">Pronounced like "Bon Vonage" this MERN stack project was built with three other engineers. We all shared a passion for travel and decided to build an application that would make travel planning easier.</p>
+          <div class="links">
+            <a href="https://github.com/CurrentlyBob/bamm-voyage-front-end" target="
+            _blank" class="github-link">Github</a>
+            <a href="https://bamm-voyage.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+          </div>
         </div>
       </div>
       <div class="project">
@@ -94,12 +96,14 @@
             <h1 class="built-languages-name">Mongoose</h1>
           </div>
         </div>
-        <h2 class="project-name">LevelUp</h2>
-        <p class="project-description">It's time to LevelUp your life. This MEN stack solo project was created specifically to get your life in order. It has a spot for everything from creating detailed goals to helping you break your pesky bad habits.</p>
-        <div class="links">
-          <a href="https://github.com/andrea1234321/level-up" target="
-          _blank" class="github-link">Github</a>
-          <a href="https://andrea-level-up.fly.dev/" target="_blank" class="deployed-link">Launch App</a>
+        <div class="description">
+          <h2 class="project-name">LevelUp</h2>
+          <p class="project-description">It's time to LevelUp your life. This MEN stack solo project was created specifically to get your life in order. It has a spot for everything from creating detailed goals to helping you break your pesky bad habits.</p>
+          <div class="links">
+            <a href="https://github.com/andrea1234321/level-up" target="
+            _blank" class="github-link">Github</a>
+            <a href="https://andrea-level-up.fly.dev/" target="_blank" class="deployed-link">Launch App</a>
+          </div>
         </div>
       </div>
       <div class="project">
@@ -110,12 +114,14 @@
             <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
           </div>
         </div>
-        <h2 class="project-name">BlackJack</h2>
-        <p class="project-description">Everyone's favorite casino game is finally here in a vintage Vegas theme. Built purely with HTML, CSS, and Javascript this blackjack game has it all from doubling down to ace logic. Get ready to gamble that money away, as they say, "scared money, don't make money". </p>
-        <div class="links">
-          <a href="https://github.com/andrea1234321/BlackJack" target="
-          _blank" class="github-link">Github</a>
-          <a href="https://andrea-blackjack.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+        <div class="description">
+          <h2 class="project-name">BlackJack</h2>
+          <p class="project-description">Everyone's favorite casino game is finally here in a vintage Vegas theme. Built purely with HTML, CSS, and Javascript this blackjack game has it all from doubling down to ace logic. Get ready to gamble that money away, as they say, "scared money, don't make money". </p>
+          <div class="links">
+            <a href="https://github.com/andrea1234321/BlackJack" target="
+            _blank" class="github-link">Github</a>
+            <a href="https://andrea-blackjack.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+          </div>
         </div>
       </div>
       <div class="project">
@@ -129,12 +135,14 @@
             <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
           </div>
         </div>
-        <h2 class="project-name">Showcase</h2>
-        <p class="project-description">Need a place to showcase your favorite shows, well this is the app for you. This simple app was created in just a couple of days using Python and Django.</p>
-        <div class="links">
-          <a href="https://github.com/andrea1234321/showcase" target="
-          _blank" class="github-link">Github</a>
-          <a href="https://andreashowcase.fly.dev/" target="_blank" class="deployed-link">Launch App</a>
+        <div class="description">
+          <h2 class="project-name">Showcase</h2>
+          <p class="project-description">Need a place to showcase your favorite shows, well this is the app for you. This simple app was created in just a couple of days using Python and Django.</p>
+          <div class="links">
+            <a href="https://github.com/andrea1234321/showcase" target="
+            _blank" class="github-link">Github</a>
+            <a href="https://andreashowcase.fly.dev/" target="_blank" class="deployed-link">Launch App</a>
+          </div>
         </div>
       </div>
       <div class="project">
@@ -145,12 +153,14 @@
             <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
           </div>
         </div>
-        <h2 class="project-name">My Portfolio</h2>
-        <p class="project-description">That's right, the website you are currently on was built entirely by me (even the background images). I wanted to be able to show my bubbly personality through my own portfolio piece. I hope you got a sense of who I am and a little sprinkle of what I can bring to your company.</p>
-        <div class="links">
-          <a href="https://github.com/andrea1234321/portfolio" target="
-          _blank" class="github-link">Github</a>
-          <a href="https://andrea-bances-monard-portfolio.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+        <div class="description">
+          <h2 class="project-name">My Portfolio</h2>
+          <p class="project-description">That's right, the website you are currently on was built entirely by me (even the background images). I wanted to be able to show my bubbly personality through my own portfolio piece. I hope you got a sense of who I am and a little sprinkle of what I can bring to your company.</p>
+          <div class="links">
+            <a href="https://github.com/andrea1234321/portfolio" target="
+            _blank" class="github-link">Github</a>
+            <a href="https://andrea-bances-monard-portfolio.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+          </div>
         </div>
       </div>
     </div>
