add alternate picture to profile project, add favicon, change resume

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Monofett&display=swap" rel="stylesheet">
   <script defer src="/js/app.js"></script>
+  <link 
+  id="favicon"
+  rel="icon"
+  type="image/png"
+  href="/assets/images/favicon.png"
+  sizes="32x32">
   <title>Andrea Bances-Monard</title>
 </head>
 <body>
