--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Monofett&display=swap" rel="stylesheet">
+  <link 
+  id="favicon"
+  rel="icon"
+  type="image/png"
+  href="/assets/images/favicon.png"
+  sizes="32x32">
   <script defer src="/js/app.js"></script>
   <title>Andrea Bances-Monard</title>
 </head>
@@ -78,7 +84,7 @@
         </div>
         <div class="description">
           <h2 class="project-name">BAMM Voyage</h2>
-          <p class="project-description">Pronounced like "Bon Vonage" this MERN stack project was built with three other engineers. We all shared a passion for travel and decided to build an application that would make travel planning easier.</p>
+          <p class="project-description">Pronounced like "Bon Voyage" this MERN stack project was built with three other engineers. We all shared a passion for travel and decided to build an application that would make travel planning easier.</p>
           <div class="links">
             <a href="https://github.com/CurrentlyBob/bamm-voyage-front-end" target="
             _blank" class="github-link">Github</a>
