--- a/about.html
+++ b/about.html
@@ -9,6 +9,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Monofett&display=swap" rel="stylesheet">
+  <link 
+  id="favicon"
+  rel="icon"
+  type="image/png"
+  href="/assets/images/favicon.png"
+  sizes="32x32">
   <script defer src="/js/app.js"></script>
   <title>Andrea Bances-Monard</title>
 </head>
