--- a/projects.html
+++ b/projects.html
@@ -78,6 +78,10 @@
             <img src="/assets/images/js-bw.png" alt="JS" class="built-languages">
             <img src="/assets/images/html-bw.png" alt="HTML" class="built-languages">
             <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
+            <!-- <h1 class="built-languages-name">React</h1>
+            <h1 class="built-languages-name">JavaScript</h1>
+            <h1 class="built-languages-name">HTML</h1>
+            <h1 class="built-languages-name">CSS</h1> -->
             <h1 class="built-languages-name">Express</h1>
             <h1 class="built-languages-name">Mongoose</h1>
           </div>
