change coding picture, add new project

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
     <div class="pic-container">
       <img src="/assets/images/ballet.jpeg" alt="ballet">
       <img src="/assets/images/scientist.JPG" alt="chemist">
-      <img src="/assets/images/coding.jpg" alt="coding">
+      <img src="/assets/images/coding.jpg" alt="coding" class="codingImg">
     </div>
     <div class="about-me">
       <h1>A Little Bit About Me</h1>
