--- a/projects.html
+++ b/projects.html
@@ -97,6 +97,27 @@
         </div>
       </div>
       <div class="project">
+        <div class="healthPal">
+          <div class="built">
+            <img src="/assets/images/react-bw.png" alt="react" class="built-languages">
+            <img src="/assets/images/js-bw.png" alt="JS" class="built-languages">
+            <img src="/assets/images/html-bw.png" alt="HTML" class="built-languages">
+            <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
+            <h1 class="built-languages-name">Express</h1>
+            <h1 class="built-languages-name">Mongoose</h1>
+          </div>
+        </div>
+        <div class="description">
+          <h2 class="project-name">Health Pal</h2>
+          <p class="project-description">This React app was built alongside two other engineers for the "Woman Who Code Hackathon for Social Good". It utilizes the chatGPT OpenAI API to give the user medical recommendations based on the users demographics, medical history, and current concern.</p>
+          <div class="links">
+            <a href="https://github.com/andrea1234321/healthPal-front-end" target="
+            _blank" class="github-link">Github</a>
+            <a href="https://health-pal.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+          </div>
+        </div>
+      </div>
+      <div class="project">
         <div class="level-up">
           <div class="built">
             <img src="/assets/images/js-bw.png" alt="JS" class="built-languages">
@@ -169,7 +190,7 @@
           <div class="links">
             <a href="https://github.com/andrea1234321/portfolio" target="
             _blank" class="github-link">Github</a>
-            <a href="https://andrea-bances-monard-portfolio.netlify.app/" target="_blank" class="deployed-link">Launch App</a>
+            <!-- <a href="https://andrea-bances-monard-portfolio.netlify.app/" target="_blank" class="deployed-link">Launch App</a> -->
           </div>
         </div>
       </div>
