--- a/projects.html
+++ b/projects.html
@@ -105,6 +105,7 @@
             <img src="/assets/images/css-bw.png" alt="CSS" class="built-languages">
             <h1 class="built-languages-name">Express</h1>
             <h1 class="built-languages-name">Mongoose</h1>
+            <h1 class="built-languages-name">OpenAI</h1>
           </div>
         </div>
         <div class="description">
