create a connect page, remove resume and contact page

--- a/connect.html
+++ b/connect.html
@@ -5,17 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/nav.css">
-  <link rel="stylesheet" href="/css/about.css">
+  <link rel="stylesheet" href="/css/connect.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Monofett&display=swap" rel="stylesheet">
+  <script defer src="/js/app.js"></script>
   <link 
   id="favicon"
   rel="icon"
   type="image/png"
   href="/assets/images/favicon.png"
   sizes="32x32">
-  <script defer src="/js/app.js"></script>
   <title>Andrea Bances-Monard</title>
 </head>
 <body>
@@ -72,14 +72,18 @@
     </div>
   </nav>
   <main>
-    <div class="pic-container">
-      <img src="/assets/images/ballet.jpeg" alt="ballet">
-      <img src="/assets/images/scientist.JPG" alt="chemist">
-      <img src="/assets/images/coding.jpg" alt="coding" class="codingImg">
-    </div>
-    <div class="about-me">
-      <h1>A Little Bit About Me</h1>
-      <p>I’m Andrea, a ballerina, turned chemist, turned software engineer. I am a creative and artistic individual with a keen eye for the small details. I love the healthcare field but have also found a passion for coding, I’m hoping to merge the two worlds to create software solutions that enhance patient care.</p>
+    <h1 class="connect-title">Let's Connect!</h1>
+    <p class="connect-subtitle">Looking forward to hearing from you</p>
+    <div class="connect-icon">
+      <a href="https://www.linkedin.com/in/andrea-bances-monard/" target="_blank">
+        <img src="./assets/images/linkedin.png" alt="linkedIn Logo">
+      </a>
+      <a href="https://github.com/andrea1234321" target="_blank">
+        <img src="./assets/images/github.png" alt="GitHub Logo">
+      </a>
+      <a href="mailto:andrea_bancesmonard@knights.ucf.edu" target="_blank">
+        <img src="./assets/images/mail.png" alt="Email Logo">
+      </a>
     </div>
   </main>
 </body>
