--- a/home.html
+++ b/home.html
@@ -24,8 +24,9 @@
     <div class="links-container">
       <a href="/about.html" class="links" id="about">About</a>
       <a href="/projects.html" class="links" id="projects">Projects</a>
-      <a href="/resume.html" class="links" id="resume">Resume</a>
-      <a href="/contact.html" class="links" id="contact">Contact</a>
+      <!-- <a href="/resume.html" class="links" id="resume">Resume</a> -->
+      <!-- <a href="/contact.html" class="links" id="contact">Contact</a> -->
+      <a href="/connect.html" class="links" id="connect">Connect</a>
     </div>
   </main>
 </body>
