--- a/projects.html
+++ b/projects.html
@@ -34,11 +34,14 @@
       <li>
         <a href="/projects.html" class="projects">Projects</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="/resume.html" class="resume">Resume</a>
       </li>
       <li>
         <a href="/contact.html" class="contact">Contact</a>
+      </li> -->
+      <li>
+        <a href="/connect.html" class="connect">Connect</a>
       </li>
     </ul>
   </nav>
