--- a/connect.html
+++ b/connect.html
@@ -41,7 +41,7 @@
         <a href="/contact.html" class="contact">Contact</a>
       </li> -->
       <li>
-        <a href="/connect.html" class="connect">Connect</a>
+        <a href="/connect.html" class="connect">Contact</a>
       </li>
     </ul>
   </nav>
@@ -62,11 +62,14 @@
         <li>
           <a href="/projects.html" class="projects">Projects</a>
         </li>
-        <li>
+        <!-- <li>
           <a href="/resume.html" class="resume">Resume</a>
         </li>
         <li>
           <a href="/contact.html" class="contact">Contact</a>
+        </li> -->
+        <li>
+          <a href="/connect.html" class="connect">Contact</a>
         </li>
       </ul>
     </div>
