--- a/contact.html
+++ b/contact.html
@@ -34,11 +34,14 @@
       <li>
         <a href="/projects.html" class="projects">Projects</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="/resume.html" class="resume">Resume</a>
       </li>
       <li>
         <a href="/contact.html" class="contact">Contact</a>
+      </li> -->
+      <li>
+        <a href="/connect.html" class="connect">Contact</a>
       </li>
     </ul>
   </nav>
@@ -59,11 +62,14 @@
         <li>
           <a href="/projects.html" class="projects">Projects</a>
         </li>
-        <li>
+        <!-- <li>
           <a href="/resume.html" class="resume">Resume</a>
         </li>
         <li>
           <a href="/contact.html" class="contact">Contact</a>
+        </li> -->
+        <li>
+          <a href="/connect.html" class="connect">Contact</a>
         </li>
       </ul>
     </div>
