--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
       <a href="/projects.html" class="links" id="projects">Projects</a>
       <!-- <a href="/resume.html" class="links" id="resume">Resume</a> -->
       <!-- <a href="/contact.html" class="links" id="contact">Contact</a> -->
-      <a href="/connect.html" class="links" id="connect">Connect</a>
+      <a href="/connect.html" class="links" id="connect">Contact</a>
     </div>
   </main>
 </body>
